--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "axios": "^0.16.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router-dom": "^4.1.2"
+    "react-router-dom": "^4.1.2",
+    "react-spinner": "^0.2.7"
   },
   "devDependencies": {
     "react-scripts": "1.0.10"
