--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject" 
+    "eject": "react-scripts eject" ,
+    "react-scripts": "1.0.10"
   }
 }
