--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "react-spinner": "^0.2.7"
   },
   "devDependencies": {
+    "react-scripts": "1.0.10"
   },
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy": "NODE_ENV=production npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
