--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
+    "flow": "^0.2.3",
+    "flow-typed": "^2.1.5",
     "gh-pages": "^1.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -11,6 +13,9 @@
     "react-spinner": "^0.2.7"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
+    "flow-bin": "^0.52.0",
     "react-scripts": "1.0.10"
   },
   "scripts": {
